# Breakout

./: .gitignore  CMakeLists.txt
assets/levels/: level1.txt  level2.txt  level3.txt
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  game.cpp  game.h  game_event.h  input_handler.cpp  input_handler.h  level.cpp  level.h  physic_handler.cpp  physic_handler.h  physics_handler.cpp  physics_handler.h  score_handler.cpp  score_handler.h  sound_handler.cpp  sound_handler.h
src/entity/: CMakeLists.txt  ball.cpp  ball.h  brick.cpp  brick.h  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  moving_entity.cpp  moving_entity.h  paddle.cpp  paddle.h  power_up.cpp  power_up.h
src/graphics/: CMakeLists.txt  background.cpp  background.h  parallax_background.cpp  parallax_background.h  ressource_loader.cpp  ressource_loader.h  text_renderer.cpp  text_renderer.h  ui_button.cpp  ui_button.h  window.cpp  window.h
src/handler/: CMakeLists.txt  input_handler.h
src/render/: CMakeLists.txt  window.cpp  window.h
src/state/: CMakeLists.txt  game_over_state.cpp  game_over_state.h  game_state.h  menu_state.cpp  menu_state.h  play_state.cpp  play_state.h  title_card_state.cpp  title_card_state.h  win_screen_state.cpp  win_screen_state.h
src/utility/: CMakeLists.txt  aabb_utility.cpp  aabb_utility.h  coroutine.cpp  coroutine.h  math_utils.cpp  math_utils.h
